# ST-LMS

./: .env  Cargo.toml  README.md
src/: main.rs
src/config/: app.rs  database.rs  governor.rs  mod.rs
src/controllers/: mod.rs  student_controller.rs  user_controller.rs
src/db/: mongo.rs
src/exceptions/: errors.rs
src/midleware/: auth.rs  cors.rs  loggers.rs  mod.rs  permission.rs  security_headers.rs
src/models/: audit_log_model.rs  mod.rs  student_model.rs  user_model.rs
src/repo/: audit_log_repo.rs  mod.rs  student_repo.rs  user_repo.rs
src/routes/: routes.rs
src/services/: mod.rs  student_service.rs  user_service.rs
src/utill/: bcrypt.rs  generic_response.rs  jwt.rs  mod.rs  validator.rs
