[package]
name = "framework"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
cargo-watch = "8.5.3"
chrono = "0.4.39"
futures-util = "0.3.31"
tokio = { version = "1", features = ["full"] }
mongodb = "3.1.1"
serde = { version = "1.0.216", features = ["derive"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
futures = "0.3.31"
serde_json = "1.0.133"
argon2 = "0.5.3"
rand_core = "0.6.4"
actix-cors = "0.7.0"
http = "0.2.12"
validator = { version = "0.16", features = ["derive"] }
actix-web-validator = "6.0.0"
anyhow = "1.0.95"
thiserror = "1.0"
mongodb-cursor-pagination = "0.3.2"