[package]
name = "framework-orm"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
cargo-watch = "8.5.3"
chrono = "0.4.39"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.216", features = ["derive"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
futures = "0.3.31"
argon2 = "0.5.3"
rand_core = "0.6.4"
actix-cors = "0.7.0"
validator = { version = "0.16", features = ["derive"] }
thiserror = "1.0"
actix-governor = "0.4"
log = "0.4"
env_logger = "0.10"
uuid = {version = "1", features = ["v4","serde"]}
sea-orm = { version = "1.1.4", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
regex = "1.11.1"